Fix cloud sub-brand on Safari

--- a/css/seqserv.css
+++ b/css/seqserv.css
@@ -125,6 +125,10 @@ a:hover {
 For /cloud page
 */
 
+.navbar-header {
+  display: flex;
+}
+
 .text-center {
   text-align: center;
 }
